# smolvm

./: .gitignore  .gitmodules  Cargo.toml  build-cross-compiler.md  readme.md
.cargo/: config.toml
kernels/linux-5.14-stable/x86_64/: mini.config  source.md
kernels/smolkernel/aarch64/: Makefile  kernel.c  kernel.lds  pl011.c  pl011.h  printf.c  start.S  utils.S  utils.h
src/: boot_params.rs  main.rs  smolvm.rs  x86_64.rs
src/aarch64/: vm.rs
src/smolvm/: mod.rs  pl011.rs  uart.rs  uart8250.rs
src/smolvm/aarch64/: mod.rs
src/smolvm/darwin/: mod.rs
src/smolvm/darwin/aarch64/: mod.rs
src/smolvm/darwin/x86_64/: mod.rs
src/smolvm/linux/: mod.rs
src/smolvm/linux/aarch64/: cpu.rs  mod.rs
src/smolvm/linux/x86_64/: boot_params.rs  cpu.rs  mod.rs
src/smolvm/x86_64/: mod.rs  vm.rs
src/x86_64/: cpu.rs  mod.rs
