[package]
name = "rust-kvm-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.39"
object = "0.26"
kvm-bindings = "0.5"
kvm-ioctls = "0.10"
clap = "2.33"
env_logger="0.9"
log="0.4"
zerocopy="0.5"
bitflags = "1.3"
static_assertions = "1.1"
field-offset = "0.3"
memmap2 = "0.3"
iced-x86 = "1.14"
bad64 = "0.4"

#[target.'cfg(target_arch = "x86_64")'.dependencies]
#x86 = "0.41"
#x86_64 = "0.14"

#[target.'cfg(target_arch = "aarch64")'.dependencies]

[dev-dependencies]
byteorder = ">=1.2.1"
