[package]
name = "smolvm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.26"
clap = "2.33"
env_logger="0.9"
log="0.4"
zerocopy="0.5"
bitflags = "1.3"
static_assertions = "1.1"
field-offset = "0.3"
memmap2 = "0.3"
iced-x86 = "1.14"
bad64 = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = ">=0.2.39"
kvm-bindings = "0.5"
nix = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
ahv = "0.1"

[dev-dependencies]
byteorder = ">=1.2.1"

[profile.release]
debug = true
