[package]
name = "smolvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.31"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
zerocopy = "0.6"
bitflags = "2.3"
static_assertions = "1.1"
field-offset = "0.3"
memmap2 = "0.7"
iced-x86 = "1.19"
bad64 = "0.6"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
kvm-bindings = "0.6"
nix = "0.26"

[target.'cfg(target_os = "macos")'.dependencies]
ahv = "0.2"

[dev-dependencies]
byteorder = "1.4"

[profile.release]
debug = true
